posiGen_FullsendBox/src/objects/BoxAccessMatrix_Stage__c.object
<CustomObject>
    <fields>
        <fullName>BoxAccessMatrix_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BoxAccessMatrix Profile</label>
        <referenceTo>BoxAccessMatrix_Profile__c</referenceTo>
        <relationshipLabel>BoxAccessMatrix Stages</relationshipLabel>
        <relationshipName>BoxAccessMatrix_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Box_Permission__c</fullName>
        <label>Box Permission</label>
        <picklist>
            <picklistValues>
                <fullName>Co-owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uploader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previewer Uploader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewer Uploader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BoxAccessMatrix Stage</label>
    <nameField>
        <label>BoxAccessMatrix Stages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BoxAccessMatrix Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>